Fixed for fields alignment issues.

--- a/assets/assets.css
+++ b/assets/assets.css
@@ -2,13 +2,13 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-html {
+/* html {
   height: 100vh;
-}
+} */
 
 body {
   margin: 0px;
-  height: 100vh;
+  height: auto;
 }
 
 header {
@@ -26,8 +26,8 @@ header li {
   text-align: end;
   margin-left: 30px;
   margin-right: 30px;
-  position: relative;
-  top: 1px;
+  /* position: relative;
+  top: 0; */
 }
 
 main {
@@ -35,9 +35,10 @@ main {
 }
 
 section {
-  text-align: center;
+  /* text-align: center; */
   background-color: burlywood;
   padding: 10px;
+  padding-top: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,17 +47,35 @@ section {
   position: fixed;
   width: 100%;
   left: 0;
-  bottom: 71px
+  bottom: 70px
+}
+
+h2 {
+  margin: 10px;
 }
 
 form {
   border: 5px solid rgb(185, 123, 117);
   border-radius: 10px;
   width: 600px;
+  padding: 20px;
   text-align: center;
 }
 
-div {
+label {
+  display: block;
+  width: 60px;
+  text-align: center;
+}
+
+input {
+  width: 400px;
+}
+
+div p {
+  display: inline-flex;
+}
+/* div {
   display: flex;
   flex-direction: column;
 }
@@ -72,7 +91,7 @@ label {
 
 .input {
   width: 400px;
-}
+} */
 
 button {
   width: 100px;
